# crm_desktop

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  __init__.py  _main.py  backup.py  collect_all.py  config.py  conftest.py  docker-compose.yml  main.py  migrate.py  pyproject.toml  pytest.ini  requirements.txt  update.patch
api/: main.py
app/: db.py  main.py  models.py  schemas.py
core/: __init__.py  app_context.py
crm_desktop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
database/: README.md  container_config.py  db.py  init.py  migrate.py  models.py  sa.py  sa_models.py
docker/: bot.env.example  db.env.example
docs/: architecture.md  policy_matching_for_managers.md  services_overview.md  ui_classes.md
infrastructure/: __init__.py  drive_gateway.py  sheets_gateway.py
resources/: README.md  style.qss
services/: AGENTS.md  README.md  __init__.py  ai_consultant_service.py  ai_document_service.py  ai_policy_service.py  calculation_service.py  client_service.py  container.py  dashboard_service.py  deal_journal.py  deal_metrics.py  deal_service.py  executor_service.py  expense_service.py  export_service.py  folder_utils.py  income_service.py  payment_service.py  policy_service.py  query_utils.py  reso_table_service.py  sheets_service.py  task_crud.py  task_notifications.py  task_queue.py  task_service.py  task_states.py  telegram_service.py  validators.py
telegram_bot/: .env.example  Dockerfile  README.md  bot.py  container_config.py  requirements.txt
tests/: README.md  conftest.py  test_ai_document_service.py  test_ai_policy_files_dialog.py  test_ai_policy_service.py  test_ai_policy_streaming.py  test_api.py  test_base_edit_form.py  test_base_table_view_menu_copy.py  test_bot_file_upload.py  test_calculation_journal.py  test_calculation_mass_delete.py  test_calculation_service.py  test_calculations.py  test_client_merge.py  test_client_queries.py  test_client_query_order_by.py  test_client_ui.py  test_clients.py  test_column_visibility.py  test_dashboard_service.py  test_date_sorting.py  test_date_utils.py  test_deal_ai_files_helper.py  test_deal_app_service.py  test_deal_detail_settings.py  test_deal_journal.py  test_deal_kpi_counts.py  test_deal_matching_profiles.py  test_deal_matching_rules.py  (+89 more)
(+131 files in other folders)
