[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crm_desktop"
version = "0.1.0"
description = "CRM desktop application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anyio==4.9.0",
    "appdirs==1.4.4",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "colorama==0.4.6",
    "et_xmlfile==2.0.0",
    "google-api-core==2.24.2",
    "google-api-python-client==2.166.0",
    "google-auth==2.38.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.1",
    "googleapis-common-protos==1.69.2",
    "greenlet==3.1.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httplib2==0.22.0",
    "httpx==0.27.2",
    "idna==3.10",
    "iniconfig==2.1.0",
    "jsonschema==4.23.0",
    "MarkupSafe==3.0.2",
    "numpy==2.2.4",
    "oauthlib==3.2.2",
    "openpyxl==3.1.5",
    "packaging==25.0",
    "pandas==2.2.3",
    "peewee==3.17.9",
    "pluggy==1.5.0",
    "proto-plus==1.26.1",
    "protobuf==6.30.2",
    "psycopg2-binary==2.9.10",
    "pyasn1==0.6.1",
    "pyasn1_modules==0.4.2",
    "pyparsing==3.2.3",
    "PySide6==6.9.0",
    "PySide6_Addons==6.9.0",
    "PySide6_Essentials==6.9.0",
    "pytest==8.3.5",
    "pytest-timeout==2.3.1",
    "pytest-qt==4.4.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-telegram-bot==22.0",
    "pytz==2025.2",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "rsa==4.9",
    "shiboken6==6.9.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "tqdm==4.67.1",
    "typing_extensions==4.13.1",
    "tzdata==2025.2",
    "uritemplate==4.1.1",
    "urllib3==2.3.0",
    "xlrd==2.0.1",
    "openai==1.14.3",
    "PyPDF2==3.0.1",
    "pywin32==306; sys_platform == 'win32'",
]

[tool.setuptools]
packages = ["database", "services", "telegram_bot", "ui", "utils", "resources"]

[tool.ruff]
line-length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "slow: тесты, требующие GUI или долговременных операций",
]
addopts = "-m 'not slow'"
timeout = 60
timeout_method = "thread"
